--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+  <head>Saoulkie Bertin</head>
   <h1>Home</h1>
   <p> Welcome! This portfolio serves as a glimpse into my undergraduate academic journey. It includes my successes and struggles, but ultimately, it is an accumulation of the experiences that have shaped me both academically and personally.  </p>
   
