--- a/index.html
+++ b/index.html
@@ -7,14 +7,29 @@
   <a href="#about">About</a>
   <a href="#contact">Contact</a>
   </div>
-  <h1>Home</h1>
-  <p> Welcome! This portfolio serves as a glimpse into my undergraduate academic journey. It includes my successes and struggles, but ultimately, it is an accumulation of the experiences that have shaped me both academically and personally.  </p>
   
-  <h2>About</h2>
-  <p> I am a senior at the University of Central Florida (UCF) majoring in Biomedical Sciences with specialized study in medical anthropology and the anthropology of   global health. I am passionate about health equity, access to healthcare, public health, Haiti, and the global south. I am interested in pursuing a combined Ph.D. in medical anthropology and an MPH. Through my graduate studies I hope to contribute to the knowledge of health experience and illness, and apply my research in health interventions for improved health and quality of life.</p>
+  <!-- Tab links -->
+<div class="tab">
+  <button class="tablinks" onclick="openCity(event, 'Home')">Home</button>
+  <button class="tablinks" onclick="openCity(event, 'About')">About</button>
+  <button class="tablinks" onclick="openCity(event, 'Contact')">Contact</button>
+</div>
 
+<!-- Tab content -->
+<div id="Home" class="tabcontent">
+  <h3>Home</h3>
+  <p>Welcome! This portfolio serves as a glimpse into my undergraduate academic journey. It includes my successes and struggles, but ultimately, it is an accumulation of the experiences that have shaped me both academically and personally.</p>
+</div>
+
+<div id="About" class="tabcontent">
+  <h3>About</h3>
+  <p>I am a senior at the University of Central Florida (UCF) majoring in Biomedical Sciences with specialized study in medical anthropology and the anthropology of   global health. I am passionate about health equity, access to healthcare, public health, Haiti, and the global south. I am interested in pursuing a combined Ph.D. in medical anthropology and an MPH. Through my graduate studies I hope to contribute to the knowledge of health experience and illness, and apply my research in health interventions for improved health and quality of life.</p>
+</div>
+
+<div id="Contact" class="tabcontent">
   <h3>Contact</h3>
   <p>Please contact me at saoulkieb461@knights.ucf.edu for collaborations or inquiry.</p>
+</div>
 
 </body>
 </html>
