--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <head>Saoulkie Bertin</head>
+  <h1>Saoulkie Bertin</h1>
   
   <!-- Tab links -->
 <div class="tab">
