--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   
   <!-- Tab links -->
 <div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'Home')">Home</button>
-  <button class="tablinks" onclick="openCity(event, 'About')">About</button>
-  <button class="tablinks" onclick="openCity(event, 'Contact')">Contact</button>
+  <button class="tablinks" onclick="openMenu(event, 'Home')">Home</button>
+  <button class="tablinks" onclick="openMenu(event, 'About')">About</button>
+  <button class="tablinks" onclick="openMenu(event, 'Contact')">Contact</button>
 </div>
 
 <!-- Tab content -->
