--- a/index.html
+++ b/index.html
@@ -3,28 +3,23 @@
 <body>
   <h1>Saoulkie Bertin</h1>
   
-  <!-- Tab links -->
-<div class="tab">
-  <button class="tablinks" onclick="openMenu(event, 'Home')">Home</button>
-  <button class="tablinks" onclick="openMenu(event, 'About')">About</button>
-  <button class="tablinks" onclick="openMenu(event, 'Contact')">Contact</button>
-</div>
+  <button class="tablink" onclick="openPage('Home', this, 'red')"id="defaultOpen">Home</button>
+  <button class="tablink" onclick="openPage('Contact', this, 'blue')">Contact</button>
+  <button class="tablink" onclick="openPage('About', this, 'orange')">About</button>
 
-<!-- Tab content -->
-<div id="Home" class="tabcontent">
-  <h3>Home</h3>
-  <p>Welcome! This portfolio serves as a glimpse into my undergraduate academic journey. It includes my successes and struggles, but ultimately, it is an accumulation of the experiences that have shaped me both academically and personally.</p>
-</div>
+  <div id="Home" class="tabcontent">
+    <h3>Home</h3>
+    <p>Welcome! This portfolio serves as a glimpse into my undergraduate academic journey. It includes my successes and struggles, but ultimately, it is an accumulation of the experiences that have shaped me both academically and personally.</p>
+  </div>
 
-<div id="About" class="tabcontent">
-  <h3>About</h3>
-  <p>I am a senior at the University of Central Florida (UCF) majoring in Biomedical Sciences with specialized study in medical anthropology and the anthropology of   global health. I am passionate about health equity, access to healthcare, public health, Haiti, and the global south. I am interested in pursuing a combined Ph.D. in medical anthropology and an MPH. Through my graduate studies I hope to contribute to the knowledge of health experience and illness, and apply my research in health interventions for improved health and quality of life.</p>
-</div>
+  <div id="About" class="tabcontent">
+    <h3>About</h3>
+    <p>I am a senior at the University of Central Florida (UCF) majoring in Biomedical Sciences with specialized study in medical anthropology and the anthropology of global health. I am passionate about health equity, access to healthcare, public health, Haiti, and the global south. I am interested in pursuing a combined Ph.D. in medical anthropology and an MPH. Through my graduate studies I hope to contribute to the knowledge of health experience and illness, and apply my research in health interventions for improved health and quality of life.</p>
 
-<div id="Contact" class="tabcontent">
-  <h3>Contact</h3>
-  <p>Please contact me at saoulkieb461@knights.ucf.edu for collaborations or inquiry.</p>
-</div>
+  <div id="Contact" class="tabcontent">
+    <h3>Contact</h3>
+    <p>Get in touch via email at saoulkieb461@knights.ucf.edu for collaborations or inquiry.</p>
+    </div>
 
 </body>
 </html>
