--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <div id="About" class="tabcontent">
     <h3>About</h3>
+    <img src="headshot.jpg" alt="Professional Headshot">
     <p>I am a senior at the University of Central Florida (UCF) majoring in Biomedical Sciences with specialized study in medical anthropology and the anthropology of global health. I am passionate about health equity, access to healthcare, public health, Haiti, and the global south. I am interested in pursuing a combined Ph.D. in medical anthropology and an MPH. Through my graduate studies I hope to contribute to the knowledge of health experience and illness, and apply my research in health interventions for improved health and quality of life.</p>
 
   <div id="Contact" class="tabcontent">
